Fix overflowing issues

--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -30,7 +30,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  padding: 24px 34px 22px 34px;
+  padding: 0.5rem;
   border: 2px solid #04049d;
 }
 
