--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -3,4 +3,5 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  min-width: 0;
 }
