--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -4,11 +4,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  min-width: 0;
 }
 
 .call-to-actions {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
 }
 
